<resources>
    <string name="app_name">Snap Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="shopping_cart">Shopping Cart</string>
    <string name="settings">Settings</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="login">Login</string>
    <string name="as_guest">As guest</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_with_your_email_and_password_or_continue_with_social_media">Sign in with your email and password or continue with social media</string>
    <string name="email">Email :</string>
    <string name="password">Password :</string>
    <string name="username">Username :</string>
    <string name="register_account">Register Account</string>
    <string name="complete_your_details_or_continue_with_social_media">Complete your details or continue with social media</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="checkout_now">Checkout now</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="total_items">Total Items</string>
    <string name="total_items_price">$380,99</string>
    <string name="discount">Discount</string>
    <string name="discount_price">-$20,00</string>
    <string name="total">Total</string>
    <string name="total_price">$360,99</string>
    <string name="promo_code">PROMO CODE</string>
    <string name="apply">Apply</string>
    <string name="your_location">Your Location</string>
    <string name="home">Home</string>
    <string name="change_location">Change Location</string>
    <string name="cart">Shopping Cart</string>
    <string name="wishlist">Wishlist</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="browse_nand_explore">Browse \nand Explore</string>
    <string name="dive_into_our_vast_collection_nof_products_across_various_categories">Dive into our vast collection of \nproducts across various \ncategories.</string>
    <string name="get_started">Get Started</string>
    <string name="category">Category</string>
    <string name="brands">Brands</string>
    <string name="more"><![CDATA[more>>]]></string>
    <string name="search_product">search product</string>
    <string name="sale">SALE!</string>
    <string name="special_offer">Special Offer</string>
    <string name="personal_data">Personal Data</string>
    <string name="addresses">Addresses</string>
    <string name="see_all">See All</string>
    <string name="sign_out">Sign Out</string>
    <string name="created">created</string>
    <string name="select">Select</string>
    <string name="a_z">A~Z</string>
    <string name="down_arrow">↓</string>
    <string name="up_arrow">↑</string>
    <string name="dolar_sign">$</string>
    <string name="no_internet">No Internet</string>
    <string name="english">English</string>
    <string name="currency">Currency</string>
    <string name="arabic">العربية</string>
    <string name="egp">EGP</string>
    <string name="choose_language">Language</string>
    <string name="you_are_a_guest">You are a guest</string>
    <string name="go_to_login">Go to Login Screen</string>
    <string name="empty_cart">Your shopping cart is empty</string>
    <string name="payment">Payment</string>
    <string name="items">Items</string>
    <string name="shipping">Shipping</string>
    <string name="dummy_address">10th of Ramadan, Neighbourhood 5</string>
    <string name="place_order">Place Order</string>
    <string name="visa_card">Visa Card</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="default_add">Default address</string>
    <string name="order_success">Order Success</string>
    <string name="order_success_message">Your packet will be sent to your \n address, thanks for order</string>
    <string name="back_to_home">Back to home</string>
    <string name="guest_text">You\'re a guest</string>
    <string name="guest_text2">You can go create an account or login</string>
    <string name="type">Type</string>
    <string name="to">to</string>
    <string name="filter">Filter</string>
    <string name="price">Price</string>
    <string name="from">From</string>
    <string name="accessories">ACCESSORIES</string>
    <string name="shoes">SHOES</string>
    <string name="t_shirts">T-SHIRTS</string>
    <string name="created_at">Created at</string>
    <string name="your_addresses">Your Addresses :</string>
    <string name="add_address">Add Address</string>
    <string name="delete">Delete</string>


</resources>